--- a/.github/workflows/cross_compile.yml
+++ b/.github/workflows/cross_compile.yml
@@ -40,6 +40,11 @@ jobs:
       with:
         go-version: '1.21.1' # Set to specific Go version.
 
+    - name: Install build dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential libsqlite3-dev
+
     - name: Create output directory
       run: mkdir -p output
 
