--- a/.github/workflows/cross_compile.yml
+++ b/.github/workflows/cross_compile.yml
@@ -57,7 +57,7 @@ jobs:
         path: output/gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}${{ endsWith(matrix.os, 'windows') && '.exe' || '' }}
   build-darwin:
     name: Build on ${{ matrix.os }} for ${{ matrix.goarch }}
-    runs-on: ubuntu-latest
+    runs-on: darwin-latest
     strategy:
       matrix:
         include:
@@ -104,7 +104,7 @@ jobs:
         path: output/gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}${{ endsWith(matrix.os, 'windows') && '.exe' || '' }}
   build-win:
     name: Build on ${{ matrix.os }} for ${{ matrix.goarch }}
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     strategy:
       matrix:
         include:
@@ -151,9 +151,9 @@ jobs:
       with:
         name: gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}
         path: output/gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}${{ endsWith(matrix.os, 'windows') && '.exe' || '' }}
-        
+
   prepare_release:
-    needs: [build-ubuntu, build-darwin,build-win]
+    needs: [build-ubuntu, build-darwin, build-win]
     runs-on: ubuntu-latest
     steps:
       - name: Download all artifacts
