--- a/.github/workflows/cross_compile.yml
+++ b/.github/workflows/cross_compile.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build-ubuntu:
     name: Build on ${{ matrix.os }} for ${{ matrix.goarch }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest #here
     strategy:
       matrix:
         include:
