--- a/.github/workflows/cross_compile.yml
+++ b/.github/workflows/cross_compile.yml
@@ -16,8 +16,6 @@ jobs:
         include:
           - os: linux
             goarch: amd64
-          - os: linux
-            goarch: arm64
 
     steps:
     - name: Checkout code
@@ -57,14 +55,12 @@ jobs:
         path: output/gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}${{ endsWith(matrix.os, 'windows') && '.exe' || '' }}
   build-darwin:
     name: Build on ${{ matrix.os }} for ${{ matrix.goarch }}
-    runs-on: darwin-latest
+    runs-on: macos-latest
     strategy:
       matrix:
         include:
           - os: darwin
             goarch: amd64
-          - os: darwin
-            goarch: arm64
 
     steps:
     - name: Checkout code
