--- a/.github/workflows/cross_compile.yml
+++ b/.github/workflows/cross_compile.yml
@@ -42,17 +42,32 @@ jobs:
         CGO_ENABLED: 1
       run: |
         if [ "$GOOS" = "windows" ]; then
-          go build -o output/gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}.exe
+          go build -ldflags="-s -w" -o output/gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}.exe
         else
-          go build -o output/gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}
+          go build -ldflags="-s -w" -o output/gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}
         fi
       shell: bash
+
+    - name: Compress executable files with UPX (except for gensokyo-android-arm64)
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y upx
+        if [[ "${{ matrix.os }}" == *"windows"* ]]; then
+          FILENAME="output/gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}.exe"
+        else
+          FILENAME="output/gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}"
+        fi
+        if [[ "${{ matrix.os }}" == "android" && "${{ matrix.goarch }}" == "arm64" ]]; then
+          echo "Skipping UPX compression for $FILENAME"
+        else
+          upx --best --lzma "$FILENAME"
+        fi
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}
-        path: output/gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}${{ endsWith(matrix.os, 'windows') && '.exe' || '' }}
+        name: gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}
+        path: output/gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}${{ endsWith(matrix.os, 'windows') && '.exe' || '' }}
   build-win:
     name: Build on ${{ matrix.os }} for ${{ matrix.goarch }}
     runs-on: windows-latest
@@ -91,17 +106,43 @@ jobs:
         CGO_ENABLED: 1
       run: |
         if [ "$GOOS" = "windows" ]; then
-          go build -o output/gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}.exe
+          go build -ldflags="-s -w" -o output/gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}.exe
         else
-          go build -o output/gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}
+          go build -ldflags="-s -w" -o output/gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}
+        fi
+      shell: bash
+
+    - name: Setup UPX
+      run: |
+        if [[ "${{ runner.os }}" == "Windows" ]]; then
+          Invoke-WebRequest -Uri "https://github.com/upx/upx/releases/download/v3.96/upx-3.96-win64.zip" -OutFile "upx.zip"
+          Expand-Archive -Path "upx.zip" -DestinationPath "${{ github.workspace }}"
+          echo "${{ github.workspace }}/upx-3.96-win64" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        else
+          sudo apt-get update
+          sudo apt-get install -y upx
+        fi
+      shell: bash
+
+    - name: Compress executable files with UPX (except for gensokyo-android-arm64)
+      run: |
+        if [[ "${{ matrix.os }}" == *"windows"* ]]; then
+          FILENAME="output/gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}.exe"
+        else
+          FILENAME="output/gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}"
+        fi
+        if [[ "${{ matrix.os }}" == "android" && "${{ matrix.goarch }}" == "arm64" ]]; then
+          echo "Skipping UPX compression for $FILENAME"
+        else
+          upx --best --lzma "$FILENAME"
         fi
       shell: bash
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}
-        path: output/gensokyo-hunyuan-${{ matrix.os }}-${{ matrix.goarch }}${{ endsWith(matrix.os, 'windows') && '.exe' || '' }}
+        name: gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}
+        path: output/gensokyo-llm-${{ matrix.os }}-${{ matrix.goarch }}${{ endsWith(matrix.os, 'windows') && '.exe' || '' }}
 
   prepare_release:
     needs: [build-ubuntu, build-win]
