--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 # specific
 config.yml
 *.sqlite
-sensitive_words.txt
-sensitive_words_in.txt
-sensitive_words_out.txt
-white.txt
+*.txt
 
 # Go specific
 *.exe
